--- a/Sameya.html
+++ b/Sameya.html
@@ -9,16 +9,19 @@
 <body background="BG-W.jpg">
 	
 	<ul>
-<li><a  href="http://techteach.us/Web2020/BSameya/WCP/">Home</a></li>
+<li><a  href="#">Home</a></li>
 <li><a  href="LABS/index.html">Labs</a></li>
 <li><a  href="PROJECTS/index.html">Projects</a></li>
-<li><a  href="https://www.blogger.com/blogger.g?blogID=3830907548384313061#allposts">Blog</a></li>
-<li><a  href="https://github.com/MrsRamirez/Web2020/edit/master/Sameya.html">Github</a></li>	
+<li><a  href="#">Blog</a></li>
+<li><a  href="#">Credits</a></li>	
 </ul>
 	<div class="design">
 	<h1>Sameya Begum</h1>
 		<h1 class="cla2020"> Class Of 2020<br> Web Design</h1>
 	<h1 class="quo">  Success is not what you have, but who you are. -Bo Bennett</h1>
+	<center> 
+		<h5> Wednesday November 5 </h5>
+		</center>
 	</div>
 </body>
 	
